--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -17,6 +17,7 @@ em {
   position: relative;
   display: block;
   padding-left: 36px;
+  font-size: 16px;
 }
 
 .richEditor-frame.InputBox {
@@ -231,6 +232,11 @@ em {
   max-width: calc(100% - 39px);
 }
 
+.insertPopover {
+  position: relative;
+  z-index: 6;
+}
+
 .insertPopover .InputBox {
   width: 100%;
   box-sizing: border-box;
@@ -289,6 +295,12 @@ em {
   padding-left: 12px;
   padding-right: 12px;
   margin-bottom: 12px;
+}
+
+.richEditor-menu.insertEmoji {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
 }
 
 .richEditor-emojis {
