Move location of image cropper changes

--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -1,3 +1,6 @@
+// Compatibility
+@import "compatibility/image-cropper";
+
 // This should always be added after style.css and not be overridden.
 
 @import "new-features/followButton";
