--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -1,3 +1,12 @@
+/** Hides the image cropper on mobile themes. This image cropper is not mobile compatible. */
+body.isMobile .box-crop .box-source {
+  display: none;
+}
+
+body.isMobile .change-picture .change-picture-instructions {
+  display: none;
+}
+
 .followButton {
   white-space: nowrap;
   font-size: 10px;
