--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -1,10 +1,5 @@
-/** Hides the image cropper on mobile themes. This image cropper is not mobile compatible. */
-body.isMobile .box-crop .box-source {
-  display: none;
-}
-
-body.isMobile .change-picture .change-picture-instructions {
-  display: none;
+em {
+  font-style: italic;
 }
 
 .sr-only {
@@ -18,8 +13,22 @@ body.isMobile .change-picture .change-picture-instructions {
   border: 0;
 }
 
-em {
-  font-style: italic;
+/** Hides the image cropper on mobile themes. This image cropper is not mobile compatible. */
+body.isMobile .box-crop .box-source {
+  display: none;
+}
+
+body.isMobile .change-picture .change-picture-instructions {
+  display: none;
+}
+
+@keyframes spinnerLoader {
+  0% {
+    transform: rotate(73deg);
+  }
+  100% {
+    transform: rotate(433deg);
+  }
 }
 
 .richEditor {
@@ -116,17 +125,21 @@ em {
   margin-left: auto;
 }
 
+.iconButton,
 .richEditor-button {
-  display: block;
   position: relative;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   border: 0;
   padding: 0;
+  background: none;
+}
+
+.richEditor-button {
+  display: block;
   height: 24px;
   width: 24px;
-  background: none;
 }
 
 .richEditor-button.richEditorParagraphMenu-handle {
@@ -380,6 +393,74 @@ em {
   transform: translateY(50%) rotate(-45deg);
 }
 
+.blockQuote {
+  display: block;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  vertical-align: middle;
+  background-color: #f9f9fa;
+}
+
+.userContent code,
+.code {
+  display: inline;
+  font-size: 0.86em;
+  vertical-align: middle;
+  line-height: 1em;
+  border-radius: 3px;
+  border: solid 1px #cacaca;
+  box-sizing: border-box;
+  font-family: monospace;
+  background-color: #f9f9fa;
+  padding-top: 0.07em;
+  padding-bottom: 0.07em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+
+.userContent pre,
+.codeBlock {
+  overflow-x: auto;
+  background: inherit;
+  border: 0;
+  word-wrap: normal;
+  line-height: 1.4;
+  padding: 0;
+  white-space: pre;
+}
+
+.userContent pre .code,
+.codeBlock .code {
+  display: block;
+  background: none;
+  font-size: 1em;
+  padding: 12px;
+  background-color: #f9f9fa;
+}
+
+.userContent {
+  font-size: inherit;
+}
+
+.userContent,
+.userContent span,
+.userContent div,
+.userContent td,
+.userContent th,
+.userContent code,
+.userContent a,
+.userContent p {
+  word-break: break-word;
+  word-break: break-all;
+}
+
+.userContent img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .followButton {
   white-space: nowrap;
   font-size: 10px;
@@ -505,6 +586,100 @@ em {
 
 body.Categories.isMobile .PageControls.Top {
   display: block;
+}
+
+.spoiler {
+  border-style: solid;
+  border-color: #aaadb1;
+  border-width: 1px;
+  border-radius: 2px;
+  background-color: #fff8d9;
+}
+
+.spoiler .spoiler-content {
+  display: none;
+}
+
+.spoiler .spoiler-chevronUp {
+  display: none;
+}
+
+.spoiler.isShowingSpoiler .spoiler-content {
+  display: block;
+}
+
+.spoiler.isShowingSpoiler .spoiler-chevronUp {
+  display: inline-block;
+}
+
+.spoiler.isShowingSpoiler .spoiler-chevronDown {
+  display: none;
+}
+
+.spoiler-chevronUp,
+.spoiler-chevronDown {
+  width: 8px;
+  height: 4px;
+  display: inline-block;
+  margin-left: 6px;
+  vertical-align: .2em;
+}
+
+.button-spoiler {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 100%;
+  max-width: 100%;
+  font-size: 16px;
+  min-height: 60px;
+  padding: 0 18px;
+  outline: 0;
+  cursor: pointer;
+}
+
+.button-spoiler {
+  border: 0;
+  border-radius: 0;
+  color: #555a62;
+  background-color: transparent;
+  text-align: left;
+}
+
+.button-spoiler:not([disalbed]):hover {
+  color: #f52c6e;
+  background-color: transparent;
+  z-index: 2;
+}
+
+.button-spoiler:not([disalbed]):active {
+  color: #f52c6e;
+  background-color: transparent;
+  z-index: 1;
+}
+
+.button-spoiler .spoiler-icon {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+}
+
+.spoiler-warning {
+  position: relative;
+  top: .1em;
+  padding-left: 36px;
+}
+
+.spoiler-chevron {
+  margin-left: 6px;
+}
+
+.spoiler-content {
+  padding: 0 18px 18px 18px;
 }
 
 /*# sourceMappingURL=style-compat.css.map */
