--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -12,4 +12,4 @@
 @import "new-features/followButton";
 @import "new-features/vanillaIcon";
 @import "new-features/selectBox";
-
+@import "new-features/spoiler";
