--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -29,6 +29,7 @@ $richEditor-codeBlock_padding: 16px !default;
 $richEditor-code_fg: #000000 !default;
 $richEditor-code_bg: #f9f9fa !default;
 $richEditor-code_borderColor: #cacaca;
+$richEditor-videoPlayIcon_width: 80px;
 
 .richEditor {
     position: relative;
@@ -468,9 +469,27 @@ $richEditor-code_borderColor: #cacaca;
 
 
 .userContent {
-    font-size: inherit;
+    > *:not(:last-child) {
+        margin-bottom: .6em;
+
+        + h1,
+        + h2,
+        + h3,
+        + h4,
+        + h5,
+        + h6
+        {
+            margin-top: #{$richEditor-font_size * .6};
+        }
+    }
 
     &,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
     span,
     div,
     td,
@@ -483,8 +502,78 @@ $richEditor-code_borderColor: #cacaca;
         word-break: break-all;
     }
 
-    img {
+    iframe,
+    .embedImage-img,
+    img:not(.emoji) {
+        display: block;
+        position: relative;
+        margin: {
+            left: auto;
+            right: auto;
+        }
         max-width: 100%;
-        max-height: 100%;
+        max-height: 80vh;
     }
+}
+
+.embedVideo {
+    position: relative;
+    display: block;
+    width: 100%;
+    background-color: #000000;
+    padding: {
+        left: 0;
+        right: 0;
+        bottom: 0;
+    };
+
+    &.is21by9 {
+        padding-top: #{(9/21*100%)};
+    }
+
+    &.is16by9 {
+        padding-top: #{(9/16*100%)};
+    }
+
+    &.is4by3 {
+        padding-top: #{(3/4*100%)};
+    }
+
+    &.is1by1 {
+        padding-top: 100%;
+    }
+
+    iframe,
+    .embedVideo-iframe {
+        @include absolute-fullSizeOfParent;
+    }
+}
+
+.embedVideo-playButton {
+    @include absolute-fullSizeOfParent;
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.embedVideo-playIcon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: $richEditor-videoPlayIcon_width;
+    height: $richEditor-videoPlayIcon_width;
+    color: white;
+}
+
+.embedVideo-playIconPath {
+    stroke: rgba(0, 0, 0, 0.1);
+}
+
+.emoji {
+    width: 20px;
+    height: 20px;
+    vertical-align: -.232em;
 }
