--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -13,3 +13,4 @@
 @import "new-features/vanillaIcon";
 @import "new-features/selectBox";
 @import "new-features/spoiler";
+@import "new-features/embed";
